# grpc-poc

./: .gitignore  README.md  pom.xml
apis/: pom.xml
apis/echo/: pom.xml
apis/echo/src/main/java/org/hitachivantara/echo/: IEchoService.java
apis/proto/: pom.xml
apis/proto/src/main/proto/org/hitachivantara/echo/grpc/: EchoService.proto
apis/proto/src/main/resources/org/hitachivantara/echo/grpc/: EchoService.proto
dev/: pom.xml
dev/src/main/java/org/hitachivantara/echo/dev/: GrpcClient.java  GrpcServer.java
impls/: pom.xml
impls/echo/: pom.xml
impls/echo/src/main/java/org/hitachivantara/echo/impl/: EchoService.java
impls/grpc/: pom.xml
impls/grpc-js-client/: package-lock.json  package.json  pom.xml
impls/grpc-js-client/src/main/javascript/: EchoService_grpc_web_pb.js  EchoService_pb.js  envoy.yaml  index.html  something.js
impls/grpc/src/main/java/org/hitachivantara/echo/grpc/impl/: EchoServiceGrpc.java
rust/: Cargo.toml  README.md
rust/apis/echo/: Cargo.toml
rust/apis/echo/src/: lib.rs
rust/dev/: Cargo.toml
rust/dev/src/: client.rs  server.rs
rust/impls/echo/: Cargo.toml
rust/impls/echo-grpc/: Cargo.toml  build.rs
rust/impls/echo-grpc/src/: lib.rs
rust/impls/echo/src/: lib.rs
