[package]
name = "echo-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo-api = { path = "../../apis/echo", version = "0.1.0" } # normally this would only reference a version published to a registry
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
